Fixed large numbers overflowing

--- a/styles/style.css
+++ b/styles/style.css
@@ -44,7 +44,7 @@ body {
 }
 
 .top-line {
-    font-size: 24px;
+    font-size: 22px;
     color: rgb(128, 128, 128);
     min-height: 35px;
 }
